[package]
name = "magicblock-accounts"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }

magicblock-committor-service = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction-error = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
