[package]
name = "magicblock-aml"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "magicblock_aml"
path = "src/lib.rs"

[dependencies]
futures-util = { workspace = true }
magicblock-config = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
