[package]
name = "magicblock-aml"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "magicblock_aml"
path = "src/lib.rs"

[dependencies]
futures-util = { workspace = true }
magicblock-config = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
magicblock-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
