[package]
name = "magicblock-aperture"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# network
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server", "http2", "http1"] }
hyper-util = { workspace = true, features = ["server", "http2", "http1"] }
fastwebsockets = { version = "0.10", features = ["upgrade"] }

# runtime
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# containers
scc = { workspace = true }

# sync
parking_lot = { workspace = true }
flume = { workspace = true }

# magicblock
magicblock-accounts-db = { workspace = true }
magicblock-config = { workspace = true }
magicblock-core = { workspace = true }
magicblock-ledger = { workspace = true }
magicblock-version = { workspace = true }

# solana
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-compute-budget-instruction = { workspace = true }
solana-feature-set = { workspace = true }
solana-fee = { workspace = true }
solana-fee-structure = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true }
solana-system-transaction = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }
solana-transaction-status-client-types = { workspace = true }


# misc
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
json = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
test-kit = { workspace = true }
solana-rpc-client = { workspace = true }
solana-pubsub-client = { workspace = true }
