[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "magicblock-aperture"
repository.workspace = true
version.workspace = true

[dependencies]
# network
fastwebsockets = { workspace = true, features = ["upgrade"] }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "http2", "server"] }
hyper-util = { workspace = true, features = ["http1", "http2", "server"] }

# runtime
futures = { workspace = true }
libloading = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# containers
arc-swap = { workspace = true }
scc = { workspace = true }

# sync
parking_lot = { workspace = true }

# magicblock
magicblock-chainlink = { workspace = true }
magicblock-config = { workspace = true }
magicblock-core = { workspace = true }
magicblock-engine = { workspace = true }
magicblock-engine-nucleus = { workspace = true, features = ["runtime"] }
ledger = { workspace = true }
magicblock-ledger-deprecated = { workspace = true }
magicblock-metrics = { workspace = true }
magicblock-version = { workspace = true }

# solana
agave-geyser-plugin-interface = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-feature-set = { workspace = true }
solana-fee-structure = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true, features = ["wincode"] }
solana-pubkey = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true }
solana-svm = { workspace = true }
solana-system-transaction = { workspace = true }
solana-transaction = { workspace = true, features = ["wincode"] }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }


# misc
base64 = { workspace = true }
wincode = { workspace = true }
bs58 = { workspace = true }
json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Enable the engine's black-box test harness (`engine::testkit::TestEngine`)
# only for aperture's own tests; downstream lib builds never see this feature.
magicblock-engine = { workspace = true, features = ["testkit"] }
keeper = { workspace = true, features = ["testkit"] }
v42-calculator-interface = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
solana-instruction = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-signer = { workspace = true }
