[package]
name = "magicblock-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
conjunto-transwise = { workspace = true }
crossbeam-channel = { workspace = true }
fd-lock = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
num_cpus = { workspace = true }
magicblock-account-cloner = { workspace = true }
magicblock-accounts = { workspace = true }
magicblock-accounts-api = { workspace = true }
magicblock-accounts-db = { workspace = true }
magicblock-chainlink = { workspace = true }
magicblock-committor-service = { workspace = true }
magicblock-config = { workspace = true }
magicblock-core = { workspace = true }
magicblock-aperture = { workspace = true }
magicblock-magic-program-api = { workspace = true }
magicblock-ledger = { workspace = true }
magicblock-metrics = { workspace = true }
magicblock-mutator = { workspace = true }
magicblock-processor = { workspace = true }
magicblock-program = { workspace = true }
magicblock-validator-admin = { workspace = true }
magicblock-task-scheduler = { workspace = true }
magic-domain-program = { workspace = true }

solana-feature-set = { workspace = true }
solana-inline-spl = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-transaction = { workspace = true }

tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
magicblock-delegation-program = { workspace = true }

libloading = "0.7.4"
borsh = "1.5.3"
