[package]
name = "magicblock-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
borsh = "1.5.3"
fd-lock = { workspace = true }
light-client = { workspace = true, features = ["v2"] }
log = { workspace = true }

magic-domain-program = { workspace = true }
magicblock-account-cloner = { workspace = true }
magicblock-accounts = { workspace = true }
magicblock-accounts-db = { workspace = true }
magicblock-aperture = { workspace = true }
magicblock-chainlink = { workspace = true }
magicblock-committor-service = { workspace = true }
magicblock-config = { workspace = true }
magicblock-core = { workspace = true }
magicblock-ledger = { workspace = true }
magicblock-magic-program-api = { workspace = true }
magicblock-metrics = { workspace = true }
magicblock-processor = { workspace = true }
magicblock-program = { workspace = true }
magicblock-task-scheduler = { workspace = true }
magicblock-validator-admin = { workspace = true }

num_cpus = { workspace = true }
paste = { workspace = true }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-feature-set = { workspace = true }
solana-genesis-config = { workspace = true }
solana-hash = { workspace = true }
solana-inline-spl = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sha256-hasher = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-program = { workspace = true }
solana-sysvar = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-rent = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-feature-gate-interface = { workspace = true }
solana-message = { workspace = true }
solana-native-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
