[package]
name = "magicblock-chainlink"
version.workspace = true
edition.workspace = true

[dependencies]
arc-swap = "1.7"
async-trait = { workspace = true }
bincode = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
magicblock-config = { workspace = true }
magicblock-core = { workspace = true }
magicblock-magic-program-api = { workspace = true }
magicblock-metrics = { workspace = true }
magicblock-delegation-program = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-commitment-config = { workspace = true }
solana-feature-set = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-loader-v3-interface = { workspace = true, features = ["serde"] }
solana-loader-v4-interface = { workspace = true, features = ["serde"] }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-sysvar = { workspace = true }
solana-message = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
magicblock-chainlink = { path = ".", features = ["dev-context"] }

[features]
default = []
dev-context = []
