[package]
name = "magicblock-committor-program"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
borsh = { workspace = true }
paste = { workspace = true }
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
thiserror = { workspace = true }

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
no-entrypoint = []
default = []
custom-heap = []
custom-panic = []
