[package]
name = "magicblock-committor-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
dyn-clone = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
magicblock-committor-program = { workspace = true, features = [
  "no-entrypoint",
] }
magicblock-delegation-program = { workspace = true, features = [
  "no-entrypoint",
] }
magicblock-metrics = { workspace = true }
magicblock-program = { workspace = true }
magicblock-rpc-client = { workspace = true }
magicblock-table-mania = { workspace = true }
rusqlite = { workspace = true }
solana-account = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-program = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
dev-context-only-utils = []
