[package]
name = "magicblock-committor-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lru = { workspace = true }
# TDOO: should be removed
# TODO: should be removed
# TODO: should be removed, hidden behinf the trait
magicblock-chainlink = { workspace = true }
magicblock-committor-program = { workspace = true, features = [
  "no-entrypoint",
] }
magicblock-core = { workspace = true }
magicblock-engine = { workspace = true }
magicblock-delegation-program-api = { workspace = true }
magicblock-metrics = { workspace = true }
magicblock-program = { workspace = true }
magicblock-rpc-client = { workspace = true }
magicblock-table-mania = { workspace = true }
rusqlite = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true, features = ["wincode"] }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-packet = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true, features = ["wincode"] }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
wincode = { workspace = true }

[dev-dependencies]
solana-signature = { workspace = true, features = ["rand"] }
rand = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
