[package]
name = "magicblock-committor-service"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
backoff = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
# TDOO: should be removed
magicblock-account-cloner = { workspace = true }
# TODO: should be removed
magicblock-accounts-db = { workspace = true }
# TODO: should be removed, hidden behinf the trait
magicblock-chainlink = { workspace = true }
magicblock-committor-program = { workspace = true, features = [
  "no-entrypoint",
] }
magicblock-core = { workspace = true }
magicblock-delegation-program-api = { workspace = true }
magicblock-metrics = { workspace = true }
magicblock-program = { workspace = true }
magicblock-rpc-client = { workspace = true }
magicblock-table-mania = { workspace = true }
pin-project = { workspace = true }
rusqlite = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-packet = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
magicblock-program = { workspace = true, features = ["dev-context-only-utils"] }
solana-signature = { workspace = true, features = ["rand"] }
rand = { workspace = true }
tempfile = { workspace = true }
test-kit = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
dev-context-only-utils = []