[package]
name = "magicblock-config"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display", "from_str", "deref"] }
figment = { workspace = true, features = ["toml", "env"] }
humantime = { workspace = true }
isocountry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
toml = { workspace = true }
url = { workspace = true, features = ["serde"] }

solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
