[package]
name = "magicblock-core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
compressed-delegation-client = { workspace = true }
flume = { workspace = true }
light-sdk = { workspace = true }
light-compressed-account = { workspace = true }
magicblock-magic-program-api = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-hash = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true, features = ["blake3", "verify"] }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
