[package]
name = "magicblock-geyser"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
json = { workspace = true }
libloading = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
