[package]
name = "magicblock-ledger"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
arc-swap = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
byteorder = { workspace = true }
fs_extra = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
num-format = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
magicblock-core = { workspace = true }
magicblock-metrics = { workspace = true }
scc = { workspace = true }
solana-account-decoder = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction-status = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-keypair = { workspace = true }
solana-instruction = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-message = { workspace = true }
solana-transaction-context = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rocksdb = { workspace = true, default-features = false, features = ["lz4"]}

[dev-dependencies]
tempfile = { workspace = true }
solana-system-transaction = { workspace = true }

[build-dependencies]

[lib]
doctest = false
