[package]
name = "magicblock-ledger-deprecated"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
fs_extra = { workspace = true }
libc = { workspace = true }
# Only used for solana_metrics::datapoint_info! macro expansion
log = { workspace = true }
magicblock-metrics = { workspace = true }
num_cpus = { workspace = true }
prost = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-measure = { workspace = true, features = ["agave-unstable-api"] }
solana-metrics = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true, features = ["rand"] }
solana-storage-proto = { workspace = true }
solana-transaction = { workspace = true, features = ["blake3", "verify"] }
solana-transaction-status = { workspace = true, features = ["agave-unstable-api"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]

[lib]
doctest = false
