[package]
name = "magicblock-magic-program-api"
description = "Magicblock magic program api"
license = "MIT"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
solana-program = { workspace = true }
solana-signature = { workspace = true, features = ["serde"] }
bincode = "^1.3.3"
serde = { version = "^1.0.228", features = ["derive"] }
const-crypto = "0.3.0"
