[package]
name = "magicblock-magic-program-api"
description = "Magicblock magic program api"
license = "MIT"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
default = []
backward-compat = ["dep:solana-program-compat", "dep:solana-signature-compat"]

[dependencies]
solana-program = { workspace = true }
solana-program-compat = { package = "solana-program", version = ">=2.0, <3", default-features = false, optional = true }
solana-signature = { workspace = true, features = ["serde"] }
solana-signature-compat = { package = "solana-signature", version = ">=2.0, <3", default-features = false, features = [
    "serde",
], optional = true }
bincode = "^1.3.3"
serde = { version = "^1.0.228", features = ["derive"] }
const-crypto = "0.3.0"

[dev-dependencies]
legacy-magicblock-magic-program-api = { version = "0.10.0", package = "magicblock-magic-program-api" }
